[package]
name = "hash_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
nix = "0.26.2"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "io-std", "fs", "io-util", "sync", "time", "net", "signal"] }
